[gd_scene load_steps=5 format=3 uid="uid://rys8sdg3ipfp"]

[ext_resource type="Script" path="res://HUD.gd" id="1_j3shd"]
[ext_resource type="FontFile" uid="uid://i5a663u1lh55" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_neuxy"]

[sub_resource type="LabelSettings" id="LabelSettings_cqmrt"]
font = ExtResource("1_neuxy")
font_size = 46

[sub_resource type="Shortcut" id="Shortcut_e361s"]
resource_local_to_scene = true
resource_name = "user_start"

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_j3shd")

[node name="Counters" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ScoreLabel" type="Label" parent="Counters"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_cqmrt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimeLeftLabel" type="Label" parent="Counters"]
layout_mode = 2
text = "0.0"
label_settings = SubResource("LabelSettings_cqmrt")
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -122.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
text = "Собирай монетки!"
label_settings = SubResource("LabelSettings_cqmrt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 30

[node name="StartButton" type="Button" parent="MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_neuxy")
theme_override_font_sizes/font_size = 48
shortcut = SubResource("Shortcut_e361s")
text = "СТАРТ"
icon_alignment = 1
